--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <Button
-        android:id="@+id/btn_get_all_cars"
+        android:id="@+id/btn_get_all_posts"
         android:layout_width="match_parent"
         android:text="Get All Car"
         android:layout_height="wrap_content" />
